ingress/gateway-api/public/public-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-public
  namespace: gateways
spec:
  gatewayClassName: automatic-replace
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-main
    protocol: HTTPS
    port: 443
    hostname: '*.automatic-replace-public-open'
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: automatic-replace-public-open
  - name: https-main-protected
    protocol: HTTPS
    port: 443
    hostname: '*.automatic-replace-public-protected'
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: automatic-replace-public-protected
  # - name: tls-main
  #   protocol: TLS
  #   port: 443
  #   allowedRoutes:
  #     namespaces:
  #       from: All
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - kind: Secret
  #       name: automatic-replace
