ingress/gateway-api/public/protected-tls-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: protected-tls-redirect
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: https-tls-protected
  hostnames:
  - '*.p.meoe.cloudns.be'
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: main-protected-istio
      port: 443
      weight: 1
