ingress/gateway-api/public/public-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect-public
  namespace: gateways
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
