ingress/gateway-api/public/istio-auth-allow.template.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: main-public.https-main-protected.allow-metrics
  namespace: gateways
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-public
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts:
        - '*-m.REPLACE_ME_PROTECTED_DOMAIN_SUFFIX'
    when:
    - key: request.auth.claims[groups]
      values:
      - REPLACE_ME_GROUP_NAME
